--- a/html_css/package.json
+++ b/html_css/package.json
@@ -7,5 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "vineeth",
-  "license": "ISC"
+  "license": "BSD-2-Clause"
 }
